src/test/compile-fail/reserved_GC_malloc.mmtn
// { "compile_status": "fail" }

fn GC_malloc() -> u64 {
    0
}

fn main() -> u64 {
    GC_malloc()
}
